@@ -1,9 +1,9 @@
 Package: rhdf5
 Type: Package
 Title: HDF5 interface to R
-Version: 2.11.2
+Version: 2.11.3
 Author: Bernd Fischer, Gregoire Pau
-Maintainer: Bernd Fischer <bernd.fischer@embl.de>
+Maintainer: Bernd Fischer <b.fischer@dkfz.de>
 Description: This R/Bioconductor package provides an interface between HDF5 and R. HDF5's main features are the ability to store and access very large and/or complex datasets and a wide variety of metadata on mass storage (disk) through a completely portable file format. The rhdf5 package is thus suited for the exchange of large and/or complex datasets between R and other software package, and for letting R applications work on datasets that are larger than the available RAM. 
 License: Artistic-2.0
 LazyLoad: true
