@@ -20,6 +20,7 @@ H5Scopy                   (h5space)
 H5Sclose                  (h5space)
 H5Sis_simple              (h5space)
 H5Sget_simple_extent_dims (h5space)
+H5Sset_extent_simple      (h5space, dims, maxdims)
 H5Sselect_hyperslab       (h5space, op = h5default("H5S_SELECT"), 
 			     start = NULL, stride = NULL, count = NULL, block = NULL)
 H5Sselect_index           (h5space, index)
